@@ -70,7 +70,7 @@ Grid.prototype.get = function(id, callback) {
     if(err) return callback(err, null);
     
     // Return the data
-    gridStore.readBuffer(function(err, data) {
+    gridStore.read(function(err, data) {
       return callback(err, data)
     });  
   })
