@@ -637,7 +637,7 @@ GridStore.prototype.readlines = function(separator, callback) {
   separator = args.length ? args.shift() : null;
 
   this.read(function(err, data) {
-    var items = data.split(separator);
+    var items = data.toString().split(separator);
     items = items.length > 0 ? items.splice(0, items.length - 1) : [];
     for(var i = 0; i < items.length; i++) {
       items[i] = items[i] + separator;
@@ -650,12 +650,8 @@ GridStore.prototype.readlines = function(separator, callback) {
  * Deletes all the chunks of this file in the database if mode was set to "w" or
  * "w+" and resets the read/write head to the initial position.
  *
- * @param callback {function(*, GridStore)} This will be called after executing
- *     this method. The first parameter will contain null and the second one
- *     will contain a reference to this object.
- *
- * @ignore
- * @api private
+ * @param {Function} callback this will be called after executing this method. The first parameter will contain null and the second one will contain a reference to this object.
+ * @api public
  */
 GridStore.prototype.rewind = function(callback) {
   var self = this;
@@ -683,7 +679,7 @@ GridStore.prototype.rewind = function(callback) {
 };
 
 /**
- * Retrieves the contents of this file and advances the read/write head.
+ * Retrieves the contents of this file and advances the read/write head. Works with Buffers only.
  *
  * There are 3 signatures for this method:
  *
@@ -691,53 +687,12 @@ GridStore.prototype.rewind = function(callback) {
  * (length, callback)
  * (length, buffer, callback)
  *
- * @param length {number=} opt_argument The number of characters to read. Reads
- *     all the characters from the read/write head to the EOF if not specified.
- * @param buffer {string=''} opt_argument A string to hold temporary data. This
- *     is used for storing the string data read so far when recursively calling
- *     this method.
- * @param callback {function(*, string)} This will be called after this method
- *     is executed. null will be passed to the first parameter and a string 
- *     containing the contents of the buffer concatenated with the contents read
- *     from this file will be passed to the second.
- *
- * @ignore
- * @api private
+ * @param {Number} [length] the number of characters to read. Reads all the characters from the read/write head to the EOF if not specified.
+ * @param {String|Buffer} [buffer] a string to hold temporary data. This is used for storing the string data read so far when recursively calling this method.
+ * @param {Function} callback this will be called after this method is executed. null will be passed to the first parameter and a string containing the contents of the buffer concatenated with the contents read from this file will be passed to the second.
+ * @api public
  */
 GridStore.prototype.read = function(length, buffer, callback) {
-  var self = this;  
-  var args = Array.prototype.slice.call(arguments, 0);
-  callback = args.pop();
-  length = args.length ? args.shift() : null;
-  buffer = args.length ? args.shift() : null;
-
-  // The data is a c-terminated string and thus the length - 1
-  var finalBuffer = buffer == null ? '' : buffer;
-  var finalLength = length == null ? self.length - self.position : length;
-
-  if((self.currentChunk.length() - self.currentChunk.position + 1 + finalBuffer.length) >= finalLength) {
-    finalBuffer = finalBuffer + self.currentChunk.read(finalLength - finalBuffer.length);
-    self.position = finalBuffer.length;
-    callback(null, finalBuffer);
-  } else {
-    finalBuffer = finalBuffer + self.currentChunk.read(self.currentChunk.length());
-    // Load the next chunk and read some more
-    nthChunk(self, self.currentChunk.chunkNumber + 1, function(err, chunk) {
-      if(chunk.length() > 0) {
-        self.currentChunk = chunk;
-        self.read(length, finalBuffer, callback);        
-      } else {
-        finalBuffer.length > 0 ? callback(null, finalBuffer) : callback(new Error("no chunks found for file, possibly corrupt"), null);
-      }
-    });
-  }
-};
-
-/**
- * @ignore
- * @api private
- */
-GridStore.prototype.readBuffer = function(length, buffer, callback) {
   var self = this;
 
   var args = Array.prototype.slice.call(arguments, 0);
@@ -770,8 +725,12 @@ GridStore.prototype.readBuffer = function(length, buffer, callback) {
 
     // Load next chunk and read more    
     nthChunk(self, self.currentChunk.chunkNumber + 1, function(err, chunk) {
-      self.currentChunk = chunk;
-      self.readBuffer(length, finalBuffer, callback);
+      if(chunk.length() > 0) {
+        self.currentChunk = chunk;
+        self.read(length, finalBuffer, callback);
+      } else {
+        finalBuffer._index > 0 ? callback(null, finalBuffer) : callback(new Error("no chunks found for file, possibly corrupt"), null);
+      }
     });
   }
 }
